# TWILIGHT

./: 404.html  CMakeLists.txt  Dockerfile  README.md  index.html  mkdocs.yml  rebuild.sh
.github/workflows/: ci.yml
dataset/: 128-taxon-trial-1.nwk  16384-taxon-trial-1.nwk  RNASim.fa  RNASim.nwk  RNASim_10000.nwk  RNASim_10000.tre  RNASim_50000.tre  RNASim_backbone.aln  RNASim_backbone.nwk  RNASim_sub.fa  gene1.aln  hoxd70.txt  sars_20.fa  sars_20.nwk  sars_200.nwk  sars_2000.nwk  substitution.txt
dataset/RNASim_subalignments/: RNASim-0.aln  RNASim-1.aln  RNASim-2.aln  RNASim-3.aln
docker/cpu/: Dockerfile
docker/gpu/: Dockerfile
docs/: index.md
install/: buildTWILIGHT.sh  installDependencies.sh  installIterative.sh  installTWILIGHT.sh
search/: search_index.json
src/: TALCO-XDrop.cpp  TALCO-XDrop.hpp  TALCO-XDrop_sg.cpp  align-util.cpp  align-util.hpp  align.cpp  align.cu  align.cuh  align.hpp  alignment-cpu.cpp  alignment-helper.cpp  blosum.hpp  consistency.cpp  consistency.hpp  consistency_v2.cpp  consistency_v2.hpp  consistency_v3.cpp  findgpu.cu  io.cpp  local-align.cpp  local-align.hpp  msa-cpu.cpp  msa-cpu.hpp  msa-gpu.cu  msa-gpu.cuh  msa-main.cpp  msa-main.cu  msa.cpp  msa.cu  msa.hpp  option.cpp  option.hpp  partitionInfo.cpp  partitionInfo_new.cpp  phylogeny.cpp  phylogeny.hpp  process.cu  process.cuh  progressive.cpp  scoring-matrix.cpp  (+19 more)
src/cuda/: align.cu  alignment-gpu.cu  consistency.cu  consistency_v2.cu  device-function.cu  device-function.cuh  msa-gpu.cu  msa-gpu.cuh  twilight-main.cu
src/hip/: align.hip.cpp  align.hip.hpp  alignment-gpu.hip.cpp  device-function.hip.cpp  findgpu.hip.cpp  msa-gpu.hip.cpp  msa-gpu.hip.hpp  twilight-main.hip.cpp
src_mga/: SequenceInfo.cpp  alignment.cpp  alignmentSet.cpp  alignment_kernel.cpp  block.cpp  block.hpp  blockManager.cpp  blockMerger.cpp  blockSet.cpp  io.cpp  mga.hpp  node.cpp  option.cpp  option.hpp  parser.cpp  phylogeny.hpp  progressive.cpp  progressive.hpp  tree.cpp  twilight_mga-main.cpp
src_new/: TALCO-XDrop.cpp  TALCO-XDrop.hpp  alignment-cpu.cpp  alignment-helper.cpp  io.cpp  msa.hpp  node.cpp  option.cpp  partitionInfo.cpp  phylogeny.cpp  phylogeny.hpp  progressive.cpp  scoring-matrix.cpp  sequencedb.cpp  tree.cpp
src_new/cuda/: alignment-gpu.cu  device-function.cu  device-function.cuh  gpu-info.cu  twilight-main.cu
src_new/hip/: alignment-gpu.hip.cpp  device-function.hip.cpp  gpu-info.hip.cpp  twilight-main.hip.cpp
test/: dumy.treefile  gene1_dumy.aln  gene1_ref.aln  test_align.cpp  test_msa.cpp  test_msa.cu
workflow/: Snakefile  config.yaml
workflow/rules/: dipper_init.smk  dipper_iter.smk  fasttree.smk  iqtree.smk  maffttree.smk  mashtree.smk  parttree.smk  placement.smk  raxml.smk  twilight.smk
workflow/scripts/: mafft2nwk.py  mashtree.sh  reduceLen.py  resolveTree.py
